ROM.py OK (falta deixar IO_out automático)

--- a/Python_script/ignore/Python_vhd_script copy.ipynb
+++ b/Python_script/ignore/Python_vhd_script copy.ipynb
@@ -319,7 +319,7 @@
         "      'Using': False,        # True = usar versão Sigmoid (Look Up Table)\n",
         "      'Memory': {\n",
         "        'bits_mem': 8,\n",
-        "        'mantissa': lambda:Neuron_arch_dict['Sigmoid']['Memory']['bits_mem'],  # 'n' binary digits are the fractional part of `x`; = MANTISSA\n",
+        "        'input_mem_bits': lambda:Neuron_arch_dict['Sigmoid']['Memory']['bits_mem'],  # 'n' binary digits are the fractional part of `x`; = MANTISSA\n",
         "      }\n",
         "    }\n",
         "  },\n",
@@ -677,7 +677,7 @@
         "        'Using': False,        # True = usar versão Sigmoid (Look Up Table)\n",
         "        'Memory': {\n",
         "          'bits_mem': 8,\n",
-        "          'mantissa': lambda:Neuron_arch_dict['Sigmoid']['Memory']['bits_mem'],  # 'n' binary digits are the fractional part of `x`; = MANTISSA\n",
+        "          'input_mem_bits': lambda:Neuron_arch_dict['Sigmoid']['Memory']['bits_mem'],  # 'n' binary digits are the fractional part of `x`; = MANTISSA\n",
         "         }\n",
         "        }\n",
         "      }\n",
