--- a/Python_script/ignore/Python_vhd_script.ipynb
+++ b/Python_script/ignore/Python_vhd_script.ipynb
@@ -321,7 +321,7 @@
         "      'Using': False,        # True = usar versão Sigmoid (Look Up Table)\n",
         "      'Memory': {\n",
         "        'bits_mem': 8,\n",
-        "        'mantissa': lambda:Neuron_arch_dict['Sigmoid']['Memory']['bits_mem'],  # 'n' binary digits are the fractional part of `x`; = MANTISSA\n",
+        "        'input_mem_bits': lambda:Neuron_arch_dict['Sigmoid']['Memory']['bits_mem'],  # 'n' binary digits are the fractional part of `x`; = MANTISSA\n",
         "      }\n",
         "    }\n",
         "  },\n",
@@ -5154,7 +5154,7 @@
               "   'Leaky_ReLU': {'Using': False, 'Leaky_attenuation': 2},\n",
               "   'Sigmoid': {'Using': False,\n",
               "    'Memory': {'bits_mem': 8,\n",
-              "     'mantissa': <function standard_dicts.<lambda>()>}}}}}"
+              "     'input_mem_bits': <function standard_dicts.<lambda>()>}}}}}"
             ]
           },
           "execution_count": 146,
@@ -6120,7 +6120,7 @@
               "  'Leaky_ReLU': {'Using': False, 'Leaky_attenuation': 2},\n",
               "  'Sigmoid': {'Using': False,\n",
               "   'Memory': {'bits_mem': 8,\n",
-              "    'mantissa': <function standard_dicts.<lambda>()>}}}}"
+              "    'input_mem_bits': <function standard_dicts.<lambda>()>}}}}"
             ]
           },
           "execution_count": 181,
@@ -6241,7 +6241,7 @@
               "  'Leaky_ReLU': {'Using': False, 'Leaky_attenuation': 2},\n",
               "  'Sigmoid': {'Using': False,\n",
               "   'Memory': {'bits_mem': 8,\n",
-              "    'mantissa': <function standard_dicts.<lambda>()>}}}}"
+              "    'input_mem_bits': <function standard_dicts.<lambda>()>}}}}"
             ]
           },
           "execution_count": 184,
@@ -7068,7 +7068,7 @@
         "\n",
         "#     # pegando dados do dicionário\n",
         "#     bits = layer_dict['Neuron_arch']['Bit_WIDTH']()\n",
-        "#     n_bin = layer_dict['Neuron_arch']['Activation_fx']['Sigmoid']['Memory']['mantissa']()\n",
+        "#     n_bin = layer_dict['Neuron_arch']['Activation_fx']['Sigmoid']['Memory']['input_mem_bits']()\n",
         "#     num_inputs = layer_dict['Neuron_arch']['Inputs_number']()\n",
         "    \n",
         "#     if layer_dict['Neuron_arch']['IO_type']():\n",
